Conexion de Proyecto Java a Base de Datos MySQL

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+// Proyecto inicializado en start.spring.io
+// Descargamos como archivo .zip, descomprimimos y abrimos con IntelliJ el archivo build.gradle como Proyecto
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '4.0.1'
@@ -25,11 +28,19 @@ repositories {
 }
 
 dependencies {
+    // Spring Data JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // Spring Web, para crear la API Rest y exponer los servicios
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
+
+    // Lombok
 	compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    // MySQL Driver
 	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
